# mince

./: .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: FindTBB.cmake
include/: BucketModel.hpp  Decoder.hpp  FindPartition.hpp  LibraryFormat.hpp  MinceConfig.hpp  MinceOpts.hpp  MinceUtils.hpp  PairSequenceParser.hpp  ReadLibrary.hpp  bitfile.h  bloom.h  fcmm.hpp  misc.h
scripts/: EncodeAll.scala  EncodeAll.sh  FilterFASTQ.py  command.txt  push-binary.sh  shuffleFile.sh  testEncodeDecode.sh
src/: BucketByMinimizer.cpp  BucketByMinimizer_SetCover.cpp  BucketModel.cpp  CMakeLists.txt  CanonicalCompare.cpp  Canonicalize.cpp  Decoder.cpp  FindPartition.cpp  LibraryFormat.cpp  Makefile  MergeFastqPairs.py  MergePairs.cpp  Mince.cpp  MinceUtils.cpp  NaiveGraph.cpp  bitfile.cpp  bloom.c
testData/: test1.fa  test2.fa
